<resources>
    <string name="midiButton1" translatable="false">1</string>
    <string name="pref_countIn_key" translatable="false">pref_countIn</string>
    <string name="pref_countIn_offset" translatable="false">0</string>
    <string name="pref_countIn_max" translatable="false">4</string>
    <string name="pref_countIn_default" translatable="false">0</string>
    <string name="pref_countIn_message">If the number of "count-in" bars is not defined by a file, this value will be used. Only applicable to beat-scrolling songs.</string>
    <string name="pref_countIn_text">bars</string>
    <string name="pref_countIn_title">Default count-in</string>
    <string name="pref_commentDisplayTime_key" translatable="false">pref_commentDisplayTime</string>
    <string name="pref_commentDisplayTime_offset" translatable="false">1</string>
    <string name="pref_commentDisplayTime_max" translatable="false">19</string>
    <string name="pref_commentDisplayTime_default" translatable="false">4</string>
    <string name="pref_commentDisplayTime_message">The amount of time that an in-song comment will remain onscreen.</string>
    <string name="pref_commentDisplayTime_text" translatable="false">s</string>
    <string name="pref_commentDisplayTime_title">Comment display time</string>
    <string name="pref_mimicBandLeaderDisplay_key" translatable="false">pref_mimicBandLeaderDisplay</string>
    <string name="pref_mimicBandLeaderDisplay_title">Mimic band leader display in manual mode</string>
    <string name="pref_mimicBandLeaderDisplay_summary">If performing a song with a band leader in manual mode, this will automatically set your display to the same orientation and font sizes.</string>
    <string name="pref_proximityScroll_key" translatable="false">pref_proximityScroll</string>
    <string name="pref_proximityScroll_title">Proximity sensor scrolls page.</string>
    <string name="pref_proximityScroll_summary">If your device has a proximity sensor, triggering it will act like pressing a "page down" pedal.</string>
    <string name="pref_anyOtherKeyPageDown_key" translatable="false">pref_anyOtherKeyPageDown</string>
    <string name="pref_anyOtherKeyPageDown_title">Any other key is page-down.</string>
    <string name="pref_anyOtherKeyPageDown_summary">Any other key pressed on a connected keyboard will act like page-down.</string>
    <string name="pref_mute_key" translatable="false">pref_mute</string>
    <string name="pref_mute_title">Mute</string>
    <string name="pref_mute_summary">Never play audio.</string>
    <string name="pref_showBeatStyleIcons_key" translatable="false">pref_showBeatStyleIcons</string>
    <string name="pref_showBeatStyleIcons_title">Show scroll style icons</string>
    <string name="pref_showBeatStyleIcons_summary">Shows the scrolling style of the song as an icon in the main list.</string>
    <string name="pref_showChords_key" translatable="false">pref_showChords</string>
    <string name="pref_showChords_title">Show Chords</string>
    <string name="pref_showChords_summary">Displays the song chords above the lyrics at the correct point.</string>
    <string name="pref_highlightCurrentLine_key" translatable="false">pref_highlightCurrentLine</string>
    <string name="pref_highlightCurrentLine_title">Highlight Current Line</string>
    <string name="pref_highlightCurrentLine_summary">Highlights the current line with your chosen highlight colour.</string>
    <string name="pref_highlightBeatSectionStart_key" translatable="false">pref_highlightBeatSectionStart</string>
    <string name="pref_highlightBeatSectionStart_title">Highlight start of beat sections</string>
    <string name="pref_highlightBeatSectionStart_summary">Highlights the start of beat sections with your chosen highlight colour.</string>
    <string name="pref_highlightPageDownLine_key" translatable="false">pref_highlightPageDownLine</string>
    <string name="pref_highlightPageDownLine_title">Show page down scroll position markers</string>
    <string name="pref_highlightPageDownLine_summary">Shows the position that the display will be scrolled to when you press page-down.</string>
    <string name="pref_showMusicIcon_key" translatable="false">pref_showMusicIcon</string>
    <string name="pref_showMusicIcon_title">Show music icon</string>
    <string name="pref_showMusicIcon_summary">In the main song list, show an icon indicating that a song has a backing track.</string>
    <string name="pref_showKeyInList_key" translatable="false">pref_showKeyInList</string>
    <string name="pref_showKeyInList_title">Show song key</string>
    <string name="pref_showKeyInList_summary">In the main song list, show the key of the song.</string>
    <string name="pref_showYearInList_key" translatable="false">pref_showYearInList</string>
    <string name="pref_showYearInList_title">Show song year</string>
    <string name="pref_showYearInList_summary">In the main song list, show the year of the song (if defined).</string>
    <string name="pref_showRatingInList_key" translatable="false">pref_showRatingInList</string>
    <string name="pref_showRatingInList_title">Show song rating</string>
    <string name="pref_showRatingInList_summary">In the main song list, show the rating of the song.</string>
    <string name="pref_largePrintList_key" translatable="false">pref_largePrintList</string>
    <string name="pref_largePrintList_title">Bigger text</string>
    <string name="pref_largePrintList_summary">Displays the song list in larger text.</string>
    <string name="pref_pulse_key" translatable="false">pref_pulse</string>
    <string name="pref_pulse_title">Background pulse</string>
    <string name="pref_pulse_summary">The background will pulse in time to the rhythm.</string>
    <string name="pref_clearTagFilterOnFolderChange_key" translatable="false">pref_clearTagFilterOnFolderChange</string>
    <string name="pref_clearTagFilterOnFolderChange_title">Clear tags when filter changes?</string>
    <string name="pref_clearTagFilterOnFolderChange_summary">If true, any selected tag filters will be cleared whenever you switch folders/setlists/etc.</string>
    <string name="pref_minFontSize_key" translatable="false">pref_minFontSize</string>
    <string name="pref_minFontSize_title">Minimum font size (beat-scrolling)</string>
    <string name="pref_minFontSize_summary">The smallest font size that will be used in beat-scrolling mode.</string>
    <string name="pref_minFontSize_default" translatable="false">8</string>
    <string name="pref_maxFontSize_key" translatable="false">pref_maxFontSize</string>
    <string name="pref_maxFontSize_title">Maximum font size (beat-scrolling)</string>
    <string name="pref_maxFontSize_summary">The largest font size that will be used in beat-scrolling mode.</string>
    <string name="pref_maxFontSize_default" translatable="false">52</string>
    <string name="pref_minFontSizeSmooth_key" translatable="false">pref_minFontSizeSmooth</string>
    <string name="pref_minFontSizeSmooth_title">Minimum font size (smooth scrolling)</string>
    <string name="pref_minFontSizeSmooth_summary">The smallest font size that will be used in smooth-scrolling mode.</string>
    <string name="pref_minFontSizeSmooth_default" translatable="false">8</string>
    <string name="pref_maxFontSizeSmooth_key" translatable="false">pref_maxFontSizeSmooth</string>
    <string name="pref_maxFontSizeSmooth_title">Maximum font size (smooth scrolling)</string>
    <string name="pref_maxFontSizeSmooth_summary">The largest font size that will be used in smooth-scrolling mode.</string>
    <string name="pref_maxFontSizeSmooth_default" translatable="false">52</string>
    <string name="pref_minFontSizeManual_key" translatable="false">pref_minFontSizeManual</string>
    <string name="pref_minFontSizeManual_title">Minimum font size (manual scrolling)</string>
    <string name="pref_minFontSizeManual_summary">The smallest font size that will be used in manual-scrolling mode.</string>
    <string name="pref_minFontSizeManual_default" translatable="false">8</string>
    <string name="pref_maxFontSizeManual_key" translatable="false">pref_maxFontSizeManual</string>
    <string name="pref_maxFontSizeManual_title">Maximum font size (manual scrolling)</string>
    <string name="pref_maxFontSizeManual_summary">The largest font size that will be used in manual-scrolling mode.</string>
    <string name="pref_maxFontSizeManual_default" translatable="false">52</string>
    <string name="pref_alwaysUseBeatFontPrefs_key" translatable="false">pref_alwaysUseBeatFontPrefs</string>
    <string name="pref_alwaysUseBeatFontPrefs_title">Always use the beat-scrolling font size preferences.</string>
    <string name="pref_alwaysUseBeatFontPrefs_summary">Uses the beat-scrolling font size preferences for all songs.</string>
    <string name="pref_showScrollIndicator_key" translatable="false">pref_showScrollIndicator</string>
    <string name="pref_showScrollIndicator_title">Show scroll indicator.</string>
    <string name="pref_showScrollIndicator_summary">In the beat counter section, highlight the beat that the display will scroll on.</string>
    <string name="pref_showSongKey_key" translatable="false">pref_showSongKey</string>
    <string name="pref_showSongKey_title">Show song key on title screen.</string>
    <string name="pref_showSongKey_summary">Displays the key of the song on the song title screen.</string>
    <string name="pref_metronome_key" translatable="false">pref_metronome</string>
    <string name="pref_metronome_title">Metronome click</string>
    <string name="pref_metronome_defaultValue" translatable="false">DuringCountIn</string>
    <string name="pref_metronome_summary">Creates a clicking sound in time with the beat. Only applicable to beat-scrolling songs.</string>
    <string name="pref_metronome_dialogTitle">Metronome Click</string>
    <string name="pref_showSongBPM_key" translatable="false">pref_showSongBPM</string>
    <string name="pref_showSongBPM_title">Show song BPM on title screen</string>
    <string name="pref_showSongBPM_defaultValue" translatable="false">No</string>
    <string name="pref_showSongBPM_summary">Should the initial BPM of the song be shown on the song title screen?</string>
    <string name="pref_showSongBPM_dialogTitle">Show Song BPM</string>
    <string name="pref_screenAction_key" translatable="false">pref_screenaction</string>
    <string name="pref_screenAction_title">Controls during performance</string>
    <string name="pref_screenAction_defaultValue" translatable="false">Scroll</string>
    <string name="pref_screenAction_summary">What controls should be available while a song is playing?</string>
    <string name="pref_screenAction_dialogTitle">Controls During Performance</string>
    <string name="pref_automaticallyPlayNextSong_key" translatable="false">pref_automaticallyPlayNextSong</string>
    <string name="pref_automaticallyPlayNextSong_title">Automatically play next song</string>
    <string name="pref_automaticallyPlayNextSong_defaultValue" translatable="false">sets</string>
    <string name="pref_automaticallyPlayNextSong_summary">Should the next song start automatically when the current song ends?</string>
    <string name="pref_automaticallyPlayNextSong_dialogTitle">Automatically Play Next Song</string>
    <string name="pref_defaultTrackVolume_key" translatable="false">pref_defaultTrackVolume</string>
    <string name="pref_defaultTrackVolume_offset" translatable="false">1</string>
    <string name="pref_defaultTrackVolume_max" translatable="false">99</string>
    <string name="pref_defaultTrackVolume_default" translatable="false">99</string>
    <string name="pref_defaultTrackVolume_message">Unless specified in the file, this is the default volume that backing tracks will play at.</string>
    <string name="pref_defaultTrackVolume_text" translatable="false">%</string>
    <string name="pref_defaultTrackVolume_title">Default track volume</string>
</resources>