<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<CheckBoxPreference
		android:key="@string/pref_showBeatStyleIcons_key"
		android:title="@string/pref_showBeatStyleIcons_title"
		android:summary="@string/pref_showBeatStyleIcons_summary"
		app:iconSpaceReserved="false"
		android:defaultValue="true" />
	<CheckBoxPreference
		android:key="@string/pref_showMusicIcon_key"
		android:title="@string/pref_showMusicIcon_title"
		android:summary="@string/pref_showMusicIcon_summary"
		app:iconSpaceReserved="false"
		android:defaultValue="true" />
	<CheckBoxPreference
		android:key="@string/pref_showKeyInList_key"
		android:title="@string/pref_showKeyInList_title"
		android:summary="@string/pref_showKeyInList_summary"
		app:iconSpaceReserved="false"
		android:defaultValue="true" />
	<CheckBoxPreference
		android:key="@string/pref_showRatingInList_key"
		android:title="@string/pref_showRatingInList_title"
		android:summary="@string/pref_showRatingInList_summary"
		app:iconSpaceReserved="false"
		android:defaultValue="true" />
	<CheckBoxPreference
		android:key="@string/pref_showYearInList_key"
		android:title="@string/pref_showYearInList_title"
		android:summary="@string/pref_showYearInList_summary"
		app:iconSpaceReserved="false"
		android:defaultValue="true" />
	<CheckBoxPreference
		android:key="@string/pref_showIconInList_key"
		android:title="@string/pref_showIconInList_title"
		android:summary="@string/pref_showIconInList_summary"
		app:iconSpaceReserved="false"
		android:defaultValue="true" />
	<CheckBoxPreference
		android:key="@string/pref_largePrintList_key"
		android:title="@string/pref_largePrintList_title"
		android:summary="@string/pref_largePrintList_summary"
		app:iconSpaceReserved="false"
		android:defaultValue="false" />
	<CheckBoxPreference
		android:key="@string/pref_clearTagFilterOnFolderChange_key"
		android:title="@string/pref_clearTagFilterOnFolderChange_title"
		android:summary="@string/pref_clearTagFilterOnFolderChange_summary"
		app:iconSpaceReserved="false"
		android:defaultValue="true" />
</PreferenceScreen>